--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,8 @@ word = [
 	 ["sub", "abo"],
 	 ["win"],
 	 ["mdr"],
-	 ["dodge"]
+	 ["dodge"],
+	 ["chine", "chinois","cn"]
      ]
 
 [phrase_sard]
@@ -31,7 +32,11 @@ gg = [
 coree = [
      "vive la corée",
      "je comprends pas les corren parfois",
-     "la corrée c'est vraiment trop bien"
+     "la corrée c'est vraiment trop bien",
+     "ASTUCE DE PRO: clique droit sur le stream + google lens vous pouvez traduire le chat ingame",
+     "ce serait plus simple si les coréens parlaient français",
+     "oh la la le jeu en coréen c'est trop bien",
+     "oui franchement la corée quel dinguerie"
      ]
 	 
 sniper = [
@@ -46,20 +51,24 @@ sub = [
 	"SUB MOD SVP",
 	"subez vous aller",
 	"sub plz",
-	"sub only pls mdr"
+	"sub only pls mdr",
+	"sard tu peux passer le chat en submode stp ca devient usant là"
 	]
 
 win = [
 	"ALLER C'EST WIN ÇA",
 	"subez vous aller",
 	"Incroyable",
-	"sardGg"
+	"sardGg",
+	"Oh ouiiii",
+	"YEEEEEEEEEEEEES"
 	]
 	
 mdr = [
 	"MDRRR",
-	"subez vous aller",
-	"sub plz"
+	"mdrrr",
+	"mdr en sah",
+	"ㅋ ㅋ ㅋ ㅋ"
 	]
 
 dodge = [
@@ -67,6 +76,12 @@ dodge = [
 	"jamais accepter le 2eme proc"
 	
 	]
+chine = [
+    "Je comprends pas pourquoi les chinois sur le serveur KR utilisent un pseudo chinois",
+    "c'est pas un jugement mes les chinois sont statistiquiment des gens qui int les coréens",
+    "c'est peut être des chinois qui vivent en Corée ?",
+    "100% des chinois sont achetés"
+    ]
 
 [question_sard]
 question = [
@@ -84,8 +99,36 @@ question = [
 	 "ça fait 7 heures que je bosse sur un projet à rendre demain en t'attendant, ça fait trop plaisir de te voir !",
 	 "En PLS avec le COVID, impossible de dormir, ton stream est le bienvenu sardLove sardLove",
 	 "je te surkiff sardoche tu me change mes journées à quand le retour des asmr ? j'ai envie d'avoir un asmriste de qualité",
-	 "es-ce que qqun peut m'expliquer bien c'est quoi toute cette haine autour de sard ? ca vient d'ou et pq ca le hante encore ajd ? je comprends vraiment rien pq ils font un discord ???"
-	 
+	 "es-ce que qqun peut m'expliquer bien c'est quoi toute cette haine autour de sard ? ca vient d'ou et pq ca le hante encore ajd ? je comprends vraiment rien pq ils font un discord ???",
+	 "la musique ?",
+	 "Il veut dire quoi que ton pseudo @sardoche ?",
+	 "il est quel elo la N",
+	 "Smurf Q non ?",
+	 "tu peux recreer des comptes a l'infini en corée ou pas ?",
+	 "tu sens la diff avec tes nouveaux yeux ?",
+	 "il est quelle eheure en corée?",
+	 "est ce que t'as crée ta société en Corée pour le visa investisseur ?",
+	 "en vrai cassio hullbreaker secret op ?",
+	 "sardoche j'ai école demain",
+	 "ta décalé tes horaires comme kameto ?",
+	 "tu stream jusqu'à quelle heure ?",
+	 "Ça en est où de l’apprentissage de la langue Coréenne ?",
+	 "Les amis c'est mon anniversaire !",
+	 "Cb de win ?",
+	 "C quoi le msg qui apparait en plein milieu de l'ecran ?",
+	 "je suis en turbo win streak en G3 quel plaisir ce jeu la nuit quand l algo est avec toi",
+	 "Les maillots Karmine sont la plus belle chose qui existe",
+	 "Sardoch c’est incroyable tes live lol je t’ai pas connus sur lol et ma je te découvre c’est tellement intéressant tout les tips que tu donne comme c’est grave cool j’apprend juste en t’écoutant",
+	 "Repose toi là t’as enchaîné les games sans pauses",
+	 "sardo j'ai 13,5 de moyenne en maths et je veux faire prépa mais je sais pas si jeu peux ??",
+	 "Tu comptes faire des tutos pour nous apprendre à jouer cassio?",
+	 "comment tu fait pour que les touche de ton clavier font un son aussi satisfaisant",
+	 "Salut sard, c'est quand tu reprends ta carrière pro sur lol ?",
+	 "sardoche tu as pensé a essayer de rejoindre la karmine corp pour faire taire les haters?",
+	 "sardoche t'as pas peur d'etre décu que le ladder europeen soit trop facile a ton retour ?",
+	 "sard je joue jungle evelynn talon mais j'arrive pas à monter tu me conseilles quoi?",
+	 "Sard tu fais quoi si tu vois un sniper devant toi ? Moi je le défonce direct ce fdp",
+	 "sard comment tu fais pour connaitre la position du jungler sans poser de ward, ça t'as pris comben de temps d'avoir cette vision de jeu ?"
      ]
 
 [emote_sard]
